plugins {
    alias(libs.plugins.android.library)
    id 'maven-publish'
}

android {
    namespace 'onlyajar.airboat'
    compileSdk {
        version = release(36)
    }

    defaultConfig {
        minSdk 21

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    publishing {
        singleVariant('release') {
            withSourcesJar()
            withJavadocJar()
        }
    }
}

dependencies {
    implementation libs.androidx.appcompat
    implementation libs.material
    compileOnly project(':androidSub')
    testImplementation libs.junit
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.espresso.core
}
group = 'com.github.onlyajar.airboat'
version = '0.0.1.beta1'
afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                groupId = project.group
                artifactId = project.name
                version = project.version
            }
        }
    }
}